<resources>
    <string name="app_name">Mon Chéri Diario</string>
    <string name="title_activity_dashboard">Dashboard Activity</string>

    <!--General-->
    <string name="cancel">Cancel</string>
    <string name="confirm_button_text">Confirm</string>

    <!--LoginActivity & SignUpActivity-->
    <string name="uNameHint">Enter your E-Mail</string>
    <string name="newPassHint">Create your password</string>
    <string name="passHint">Enter your password</string>
    <string name="loginButtonText">Login</string>
    <string name="resetPasswordButtonText">Forgot password ?</string>
    <string name="signUpButtonText">Don\'t have an account?\nSign-Up</string>

    <!--SignUpActivity-->
    <string name="nameHint">Enter your first name</string>
    <string name="signUpButton">Sign Up</string>
    <string name="loginButton">Already have an account ?\nLogin</string>

    <!--ChooseProfilePicture-->
    <string name="choose_button">Choose Image</string>
    <string name="upload_button">Upload Image</string>
    <string name="skip_button">Skip</string>

    <!--Navigation-->
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_logout">Log out</string>

    <string name="menu_home">Home</string>
    <string name="menu_daily_entries">Daily Entries</string>
    <string name="menu_to_do">To Do</string>
    <string name="menu_tools">Settings</string>
    <string name="menu_share">Share</string>
    <string name="menu_about">About</string>

    <string name="navigation_manage_categories">Manage Categories</string>
    <string name="navigation_change_password">Change Password</string>
    <string name="navigation_choose_profile_picture">Change Profile Picture</string>
    <string name="navigation_manage_daily_entry">Your Daily Entry</string>
    <string name="navigation_add_task">Add Task</string>
    <string name="navigation_view_remaining_task">Remaining Tasks</string>
    <string name="navigation_view_completed_task">Completed Tasks</string>

    <!--Change Profile Picture-->
    <string name="enter_current_password">Enter your current password</string>
    <string name="enter_new_password">Enter new password</string>
    <string name="re_enter_new_password">Confirm new password</string>
    <string name="change_password_button_text">Change password</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <!--Add Task-->
    <string name="choose_date">Choose Date</string>
    <string name="choose_time">Choose Time</string>

    <!--About-->
    <string name="about_intro">Made with &#65039; by KingoMinho.</string>

    <string name="text_send"> </string>

    <!--Empty messages-->
    <string name="empty_remaining_tasks">Hooray!! No Remaining Tasks. &#128515;</string>
    <string name="empty_completed_task">No completed tasks yet. &#128533;</string>
    <string name="empty_daily_entry">No Daily entries yet!! &#128533;</string>
    <string name="empty_categories">No categories found. &#128533;</string>
</resources>
