<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.kingominho.monchridiario.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_daily_entries"
        android:name="com.kingominho.monchridiario.ui.dailyEntries.DailyEntriesFragment"
        android:label="@string/menu_daily_entries"
        tools:layout="@layout/fragment_daily_entries">
        <action
            android:id="@+id/action_nav_daily_entries_to_addDailyEntry"
            app:destination="@id/addUpdateViewDailyEntry" />
    </fragment>

    <fragment
        android:id="@+id/nav_to_do"
        android:name="com.kingominho.monchridiario.ui.toDo.ToDoFragment"
        android:label="@string/menu_to_do"
        tools:layout="@layout/fragment_to_do">
        <action
            android:id="@+id/action_nav_to_do_to_addTask"
            app:destination="@id/addTask" />
        <action
            android:id="@+id/action_nav_to_do_to_viewTaskByCategoryFragment"
            app:destination="@id/viewRemainingTasksFragment" />
    </fragment>

    <fragment
        android:id="@+id/nav_tools"
        android:name="com.kingominho.monchridiario.ui.tools.ToolsFragment"
        android:label="@string/menu_tools"
        tools:layout="@layout/fragment_tools">
        <action
            android:id="@+id/action_nav_tools_to_manageCategory"
            app:destination="@id/manageCategory"
            app:enterAnim="@anim/nav_default_enter_anim"
            app:exitAnim="@anim/nav_default_exit_anim"
            app:popEnterAnim="@anim/nav_default_pop_enter_anim"
            app:popExitAnim="@anim/nav_default_pop_exit_anim" />
        <action
            android:id="@+id/action_nav_tools_to_changePassword"
            app:destination="@id/changePassword"
            app:enterAnim="@anim/nav_default_enter_anim"
            app:exitAnim="@anim/nav_default_exit_anim"
            app:popEnterAnim="@anim/nav_default_pop_enter_anim"
            app:popExitAnim="@anim/nav_default_pop_exit_anim" />
        <action
            android:id="@+id/action_nav_tools_to_chooseProfilePicture"
            app:destination="@id/chooseProfilePicture"
            app:enterAnim="@anim/nav_default_enter_anim"
            app:exitAnim="@anim/nav_default_exit_anim"
            app:popEnterAnim="@anim/nav_default_pop_enter_anim"
            app:popExitAnim="@anim/nav_default_pop_exit_anim" />
    </fragment>

    <fragment
        android:id="@+id/nav_share"
        android:name="com.kingominho.monchridiario.ui.share.ShareFragment"
        android:label="@string/menu_share"
        tools:layout="@layout/fragment_share" />

    <fragment
        android:id="@+id/nav_send"
        android:name="com.kingominho.monchridiario.ui.send.SendFragment"
        android:label="@string/menu_send"
        tools:layout="@layout/fragment_send" />
    <fragment
        android:id="@+id/manageCategory"
        android:name="com.kingominho.monchridiario.ManageCategoryFragment"
        android:label="@string/navigation_manage_categories"
        tools:layout="@layout/fragment_manage_category" />
    <fragment
        android:id="@+id/changePassword"
        android:name="com.kingominho.monchridiario.ChangePassword"
        android:label="@string/navigation_change_password"
        tools:layout="@layout/fragment_change_password" />
    <activity
        android:id="@+id/chooseProfilePicture"
        android:name="com.kingominho.monchridiario.ChooseProfilePicture"
        android:label="@string/navigation_choose_profile_picture"
        tools:layout="@layout/activity_choose_profile_picture" />
    <fragment
        android:id="@+id/addUpdateViewDailyEntry"
        android:name="com.kingominho.monchridiario.AddUpdateViewDailyEntry"
        android:label="@string/navigation_add_daily_entry"
        tools:layout="@layout/fragment_add_daily_entry">
        <argument
            android:name="action"
            app:argType="string" />
    </fragment>
    <fragment
        android:id="@+id/addTask"
        android:name="com.kingominho.monchridiario.AddTask"
        android:label="@string/navigation_add_task"
        tools:layout="@layout/fragment_add_task">
        <argument
            android:name="category_name"
            android:defaultValue="null"
            app:argType="string"
            app:nullable="true" />
    </fragment>
    <fragment
        android:id="@+id/viewRemainingTasksFragment"
        android:name="com.kingominho.monchridiario.ViewRemainingTasksFragment"
        android:label="@string/navigation_view_remaining_task"
        tools:layout="@layout/fragment_view_task_by_category">
        <argument
            android:name="category_id"
            android:defaultValue="null"
            app:argType="string" />
        <action
            android:id="@+id/action_viewTaskByCategoryFragment_to_viewCompletedTasksFragment"
            app:destination="@id/viewCompletedTasksFragment">
            <argument
                android:name="category_id"
                android:defaultValue="null" />
        </action>
        <action
            android:id="@+id/action_viewRemainingTasksFragment_to_addTask"
            app:destination="@id/addTask" />
    </fragment>
    <fragment
        android:id="@+id/viewCompletedTasksFragment"
        android:name="com.kingominho.monchridiario.ViewCompletedTasksFragment"
        android:label="@string/navigation_view_completed_task"
        tools:layout="@layout/fragment_view_task_by_category">
        <argument
            android:name="category_id"
            android:defaultValue="null"
            app:argType="string" />
        <action
            android:id="@+id/action_viewCompletedTasksFragment_to_viewTaskByCategoryFragment"
            app:destination="@id/viewRemainingTasksFragment">
            <argument
                android:name="category_id"
                android:defaultValue="null" />
        </action>
        <action
            android:id="@+id/action_viewCompletedTasksFragment_to_addTask"
            app:destination="@id/addTask" />
    </fragment>
</navigation>